--- a/public/css/shoppingPage.css
+++ b/public/css/shoppingPage.css
@@ -449,12 +449,15 @@ select#sort:focus {
     
     .action-buttons button {
         flex: 1;
-        max-width: 50px;
-        height: 40px;
+        max-width: 50%;
+        height: 50px;
         padding: 0;
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+    .action-buttons button .text-sm {
+        font-size: 12px;
     }
     
     .action-buttons button:first-child {
